feat: add fonts

--- a/src/style/helpers/variables.scss
+++ b/src/style/helpers/variables.scss
@@ -38,7 +38,7 @@ $border-color:                $gray-lighten;
 
 /* Fonts
 ******************************/
-$font-family:                 "PT Sans", "Arial", sans-serif;
+$font-family:                 "FuturaBookC", "Arial", sans-serif;
 $font-size:                   16px;
 $font-size-sm:                0.75em; // 12px from 16px
 
