--- a/src/style/base/fonts.scss
+++ b/src/style/base/fonts.scss
@@ -1,30 +1,64 @@
-/* pt-sans-regular - cyrillic_latin */
 @font-face {
   font-weight: 400;
-  font-family: "PT Sans";
+  font-family: "FuturaBookC";
   font-style: normal;
 
   font-display: swap;
-  src: url("../../fonts/pt-sans-v10-cyrillic_latin-regular.eot"); /* IE9 Compat Modes */
-  src: local("PT Sans"), local("PTSans-Regular"),
-    url("../../fonts/pt-sans-v10-cyrillic_latin-regular.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("../../fonts/pt-sans-v10-cyrillic_latin-regular.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../../fonts/pt-sans-v10-cyrillic_latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("../../fonts/pt-sans-v10-cyrillic_latin-regular.ttf") format("truetype"),
-    /* Safari, Android, iOS */ url("../../fonts/pt-sans-v10-cyrillic_latin-regular.svg#PTSans") format("svg"); /* Legacy iOS */
+  src: url("../../fonts/FuturaBookC.eot");
+  src: url("../../fonts/FuturaBookC.eot?#iefix") format("embedded-opentype"),
+  url("../../fonts/FuturaBookC.woff2") format("woff2"),
+  url("../../fonts/FuturaBookC.woff") format("woff"),
+  url("../../fonts/FuturaBookC.ttf") format("truetype");
 }
-/* pt-sans-700 - cyrillic_latin */
+
 @font-face {
-  font-weight: 700;
-  font-family: "PT Sans";
+  font-weight: 400;
+  font-family: "FuturaDemiC";
   font-style: normal;
 
   font-display: swap;
-  src: url("../../fonts/pt-sans-v10-cyrillic_latin-700.eot"); /* IE9 Compat Modes */
-  src: local("PT Sans Bold"), local("PTSans-Bold"),
-    url("../../fonts/pt-sans-v10-cyrillic_latin-700.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("../../fonts/pt-sans-v10-cyrillic_latin-700.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../../fonts/pt-sans-v10-cyrillic_latin-700.woff") format("woff"),
-    /* Modern Browsers */ url("../../fonts/pt-sans-v10-cyrillic_latin-700.ttf") format("truetype"),
-    /* Safari, Android, iOS */ url("../../fonts/pt-sans-v10-cyrillic_latin-700.svg#PTSans") format("svg"); /* Legacy iOS */
+  src: url("../../fonts/FuturaDemiC.eot");
+  src: url("../../fonts/FuturaDemiC.eot?#iefix") format("embedded-opentype"),
+  url("../../fonts/FuturaDemiC.woff2") format("woff2"),
+  url("../../fonts/FuturaDemiC.woff") format("woff"),
+  url("../../fonts/FuturaDemiC.ttf") format("truetype");
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: "FuturaMediumC";
+  font-style: normal;
+
+  font-display: swap;
+  src: url("../../fonts/FuturaMediumC.eot");
+  src: url("../../fonts/FuturaMediumC.eot?#iefix") format("embedded-opentype"),
+  url("../../fonts/FuturaMediumC.woff2") format("woff2"),
+  url("../../fonts/FuturaMediumC.woff") format("woff"),
+  url("../../fonts/FuturaMediumC.ttf") format("truetype");
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: "Proxima Nova";
+  font-style: normal;
+
+  font-display: swap;
+  src: url("../../fonts/ProximaNova-Regular.eot");
+  src: url("../../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"),
+  url("../../fonts/ProximaNova-Regular.woff2") format("woff2"),
+  url("../../fonts/ProximaNova-Regular.woff") format("woff"),
+  url("../../fonts/ProximaNova-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: "Yeseva One";
+  font-style: normal;
+
+  font-display: swap;
+  src: url("../../fonts/YesevaOne.eot");
+  src: url("../../fonts/YesevaOne.eot?#iefix") format("embedded-opentype"),
+  url("../../fonts/YesevaOne.woff2") format("woff2"),
+  url("../../fonts/YesevaOne.woff") format("woff"),
+  url("../../fonts/YesevaOne.ttf") format("truetype");
 }
