--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -7,7 +7,23 @@
 
   display: inline-block;
 
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  font-family: "FuturaDemiC", sans-serif;
+  color: $link-color--hover;
+  text-transform: uppercase;
+  text-decoration: none;
   white-space: nowrap;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover,
+  &:focus {
+    color: $link-color;
+  }
 
   img {
     display: block;
