--- a/src/blocks/main-nav/main-nav.data.pug
+++ b/src/blocks/main-nav/main-nav.data.pug
@@ -2,51 +2,32 @@
   var mainMenu = [
     {
       "id": "0",
-      "name": "Главная страница",
+      "name": "Home",
       "url": "/"
     },
     {
-      "id": "10",
-      "name": "Страницы",
-      "url": "/pages",
-      "children": [
-        {
-          "id": "10-0",
-          "name": "О компании",
-          "url": "pages/about"
-        },
-        {
-          "id": "10-10",
-          "name": "Услуги",
-          "url": "pages/services",
-          "children": [
-            {
-              "id": "10-10-0",
-              "name": "Вёрстка",
-              "url": "pages/services/serve"
-            },
-            {
-              "id": "10-10-10",
-              "name": "Стриптиз",
-              "url": "pages/services/strip"
-            }
-          ]
-        },
-        {
-          "id": "10-20",
-          "name": "Ещё одна страница",
-          "url": "pages/some"
-        },
-      ]
+      "id": "1",
+      "name": "Projects",
+      "url": "/projects",
     },
     {
-      "id": "20",
-      "name": "Репозиторий",
-      "url": "https://github.com/nicothin/NTH-start-project"
+      "id": "2",
+      "name": "Measurement",
+      "url": "/measurement"
     },
     {
-      "id": "30",
-      "name": "Контакты автора",
-      "url": "https://nicothin.pro/contact"
+      "id": "3",
+      "name": "Team",
+      "url": "/team"
+    },
+    {
+      "id": "4",
+      "name": "Reviews",
+      "url": "/reviews"
+    },
+    {
+      "id": "5",
+      "name": "Contacts",
+      "url": "/contacts"
     },
   ];
