--- a/src/style/base/base.scss
+++ b/src/style/base/base.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    @include container(xxl);
   }
 
   &__content {
@@ -56,6 +57,10 @@ a {
   background-color: transparent;
 
   transition: color 0.3s;
+
+  &:focus {
+    outline: none;
+  }
 
   &:hover,
   &:focus {
