--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -4,6 +4,7 @@ include ../blocks/btn/btn.pug
 include ../blocks/burger/burger.pug
 include ../blocks/logo/logo.pug
 include ../blocks/main-nav/main-nav.pug
+include ../blocks/nav-block/nav-block.pug
 
 append variables
   - var page = 'index';
@@ -19,15 +20,14 @@ block svg-sprite
     include ../blocks/sprite-svg/img/sprite.svg
 
 block header
-  +logo('/')
-    img(src='./img/demo-logo.svg', alt='Logo', width='64', height='15')
+  +nav-block()
 
 block content
   h1 Heading
   p Main
 
 block footer
-  p footer
+  +nav-block()
 
 //- prepend page-bottom
 //-   script(src='js/vendor.js')
