--- a/src/blocks/nav-block/nav-block.pug
+++ b/src/blocks/nav-block/nav-block.pug
@@ -22,5 +22,5 @@ mixin nav-block(mods)
     +main-nav('0', false)
     a.nav-block__phone(href='tel:+79287683239')
       | +7 (928) 768-32-39
-    +btn('Request a call').nav-block__call-request
+    +btn('Request a call')(href='#').nav-block__call-request
       block
