--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -6,7 +6,6 @@
   background-color: $section-color-main;
 
   &__inner {
-    padding-right: 100px;
-    padding-left: 100px;
+    @include container(xxl);
   }
 }
