--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -23,8 +23,7 @@ block header
   +nav-block()
 
 block content
-  h1 Heading
-  p Main
+  include ../blocks/section-promo/section-promo.pug
 
 block footer
   +nav-block()
