--- a/src/blocks/main-nav/main-nav.scss
+++ b/src/blocks/main-nav/main-nav.scss
@@ -63,6 +63,8 @@
       // stylelint-disable
       & > #{$block-name}__link {
         color: $link-color--hover;
+
+        cursor: default;
       }
       // stylelint-enable
     }
