--- a/src/blocks/section-promo/section-promo.pug
+++ b/src/blocks/section-promo/section-promo.pug
@@ -3,7 +3,7 @@ section.promo
     div.promo__content
       h1.promo__title
         | Turnkey Repair in the city of <span>Rostov-on-Don</span>
-      p.promo__description
+      p.promo__lead
         | Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work
       div.btn__wrapper
         +btn('Calculate the cost')(href='#').promo__cost-btn
