--- a/src/blocks/section-promo/section-promo.scss
+++ b/src/blocks/section-promo/section-promo.scss
@@ -8,12 +8,12 @@
 
     display: flex;
     align-items: center;
-    min-height: 700px;
+    min-height: 707px;
     padding-left: 60px;
 
     background-image: url("../img/promo-bg.jpg");
     background-repeat: no-repeat;
-    background-position: 0 0;
+    background-position: left top;
     background-size: cover;
 
     &::after {
@@ -37,6 +37,7 @@
   }
 
   &__title {
+    margin-top: 0;
     margin-bottom: 16px;
 
     font-weight: 400;
@@ -50,7 +51,7 @@
     }
   }
 
-  &__description {
+  &__lead {
     margin-bottom: 44px;
 
     font-size: 1.375rem;
@@ -92,6 +93,7 @@
     color: $color-gold;
     text-transform: uppercase;
     text-decoration: none;
+    word-break: normal;
 
     transform: rotate(90deg);
 
@@ -104,7 +106,7 @@
   &__scroll {
     position: absolute;
     z-index: 2;
-    bottom: 0;
+    bottom: -40px;
     left: -80px;
 
     display: flex;
