--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -20,13 +20,14 @@ block svg-sprite
     include ../blocks/sprite-svg/img/sprite.svg
 
 block header
-  +nav-block()
+  +nav-block('nav-top')
 
 block content
   include ../blocks/section-promo/section-promo.pug
+  include ../blocks/section-projects/section-projects.pug
 
 block footer
-  +nav-block()
+  +nav-block('nav-bottom')
 
 //- prepend page-bottom
 //-   script(src='js/vendor.js')
