--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -7,5 +7,13 @@
 
   &__inner {
     @include container(xxl);
+
+    @media screen and (max-width: $screen-xl) {
+      @include container(xl);
+    }
+
+    @media screen and (max-width: $screen-md) {
+      @include container(md);
+    }
   }
 }
