--- a/src/blocks/main-nav/main-nav.scss
+++ b/src/blocks/main-nav/main-nav.scss
@@ -8,6 +8,10 @@
   position: relative;
   z-index: 10;
 
+  @media screen and (max-width: $screen-md) {
+    display: none;
+  }
+
   // первый уровень
   &__list {
     margin: 0;
