--- a/src/blocks/section-promo/section-promo.pug
+++ b/src/blocks/section-promo/section-promo.pug
@@ -5,7 +5,7 @@ section.promo
         | Turnkey Repair in the city of <span>Rostov-on-Don</span>
       p.promo__lead
         | Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work
-      div.btn__wrapper
+      div.promo__btn-wrapper
         +btn('Calculate the cost')(href='#').promo__cost-btn
         +btn('Submit your application', 'light')(href='#').promo__submit-btn
     div.promo__insta
