feat: add media queries for projects section

--- a/src/blocks/controls/controls.scss
+++ b/src/blocks/controls/controls.scss
@@ -6,6 +6,10 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: $screen-xl) {
+    display: none;
+  }
+
   &__arrow,
   &__circle {
     display: inline-block;
